--- a/app/assets/stylesheets/main/_frontpage.css.scss
+++ b/app/assets/stylesheets/main/_frontpage.css.scss
@@ -402,7 +402,7 @@ ul.edit-project-list {
 	}
 .app-view {
 	width:100vw !important;
-	height: calc(100vh - 286px) !important;
+	height: calc(100vh - 255px) !important;
 	padding: 40px 20px 20px !important;
 	box-sizing:border-box;
 	font-size: 15px;
